# StaffScheduling

./: .conflict-files  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  ExampleSolutionView.html  Justfile  README.md  free_days_near_weekend.py  index.html  job_table.md  launch.json  mkdocs.yml  objects.inv  package-lock.json  pyproject.toml  scanning_submitted_jobs.py  sitemap.xml  start_script.sh  submitting_jobs.py  weekend_rhythm.py
.auto-resolution/: .pre-commit-config.yaml  README.md  mkdocs.yml
.auto-resolution/src/: employee.py
.conflict-base-0/algorithm/: solving.py
.conflict-base-0/cases/: case_catalog.md
.conflict-base-0/src/: employee.py  main.py
.conflict-side-0/: pyproject.toml
.conflict-side-0/algorithm/: WebApp.py
.conflict-side-0/database/: .env.template
.conflict-side-0/src/: shift.py  solve.py
.conflict-side-1/src/: employee.py  main.py  solution.py
.github/workflows/: docs.yml  pre-commit.yml
ConstraintDataFormat/: index.html
Database table explanation/: index.html
DatabaseQueries/: index.html
algorithm/: StateManager.py  WebApp.py  app.py  handlers.py  plotting.py  solving.py
algorithm/building_constraints/: day_no_shift_after_night_shift.py  equally_distributed_workload.py  fixed_shift_workers.py  free_days_near_weekend.py  free_shifts_and_vacation_days.py  initial_constraints.py  intermediate_phase.py  intermediate_shifts.py  minimal_number_of_staff.py  minimize_number_of_consecutive_night_shifts.py  more_free_days_for_night_worker.py  not_too_long_shifts.py  not_too_many_consecutive_shifts.py  rotate_shifts_forward.py  shift_rotate_forward.py  sunday_work_history.py  target_working_hours.py  target_working_minutes.py  weekend_rhythm.py
algorithm/constraints/: constraint.py  employee.py
algorithm/templates/: index.html
cases/: case_catalog.md
cases/1/: employees.json  free_shifts_and_vacation_days.json  general_settings.json  staff_requirements.json  target_working_hours.json  target_working_minutes.json
cases/102024/: free_shifts_and_vacation_days.json  target_working_minutes.json
cases/112024/: free_shifts_and_vacation_days.json  target_working_minutes.json  worked_sundays.json
cases/12024/: employees.json  free_shifts_and_vacation_days.json  target_working_minutes.json
cases/122024/: employees.json  free_shifts_and_vacation_days.json  target_working_minutes.json  worked_sundays.json
cases/2/: employee2  employee_types.json  employees.json  employees1.json  employees_name+firstname.json  employees_name.json  employees_personalnr+name+firstname.json  fixed_shift_workers.json  free_shifts_and_vacation_days.json  free_shifts_and_vacation_days_wishes.json  free_shifts_vacation_days.json  minimal_number_of_staff.json  staff_requirements.json  target_working_minutes.json
cases/22024/: employees.json  free_shifts_and_vacation_days.json  target_working_minutes.json  worked_sundays.json
cases/3/: employee_types.json  employees.json  free_shifts_and_vacation_days.json  general_settings.json  minimal_number_of_staff.json  shift_information.json  target_working_minutes.json  test_file.json  wishes_and_blocked.json  worked_sundays.json
cases/32024/: employees.json  free_shifts_and_vacation_days.json  target_working_minutes.json
database/: .env.template  connection_setup.py  export_data.py  export_main.py  import_main.py  import_solution.py  requirements.txt  solutions_test.json  test_solution.json
developer-view/: index.html
docs/: ConstraintDataFormat.md  Constraints.md  Database table explanation.md  DatabaseConnection.md  DatabaseQueries.md  Docs.md  GeneralStructure.md  HowToBuildAConstraint.md  HowToPlot.md  index.md  output_format.md
found_solutions/: found_solutions_are_stored_here.md
getting-started/: index.html
output_format/: index.html
processed_solutions/: solution_77_2024-11-01-2024-11-30_wdefault_processed.json
schedule-renderer/: package-lock.json
search/: search_index.json
src/: SELECT.sql  diagnosis.py  diagnosis_config.py  employee.py  main.py  model.py  plot.py  run_web.bat  shift.py  solution.py  solve.py  solving.py  station.py
tests/: test_timeoffice_solution_writer.py
user-view/: index.html
visualization/: app.py  vis.py
(+585 files in other folders)
