[project]
name = "staffscheduling"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.0",
    "SQLAlchemy>=2.0.50",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "ortools>=9.15.6755",

    # Legacy -> Should be removed after refactoring
    "click>=8.2.0",
    "flask>=3.1.0",
    "pyodbc>=5.2.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "ruff>=0.15.17",
    "pytest>=9.1.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs (>=1.4.2)",
    "mkdocs-include-markdown-plugin (>=1.0.0)",
    "mkdocstrings-python (>=0.15.2)",
    "mkdocs-material (==9.6.14)",
    "mkdocstrings (>=0.15.2)",
    "mkdocs-material-extensions (>=1.0.0)",
    "mkdocs-autorefs (>=0.2.1)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
staff-scheduling = "src.main:main"
staff-scheduling-api = "src.api.main:main"

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedVariable = "warning"
ignore = [
    "src/db/**" # Database integration needs significant refactoring and is excluded from type checking
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "C4", "ISC", "PT", "Q", "UP"] # Plan to add 'N' and 'ANN' later

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that run the solver or cross module boundaries"
]
