[project]
name = "scheduling"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.0",
    "ortools>=9.15.6755",
    "SQLAlchemy>=2.0.50",
    "pyodbc>=5.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "ruff>=0.15.17",
    "pytest>=9.1.0",
    "debugpy>=1.8.21",
]

[project.optional-dependencies]
docs = [
    "mkdocs (>=1.4.2)",
    "mkdocs-include-markdown-plugin (>=1.0.0)",
    "mkdocstrings-python (>=0.15.2)",
    "mkdocs-material (==9.6.14)",
    "mkdocstrings (>=0.15.2)",
    "mkdocs-material-extensions (>=1.0.0)",
    "mkdocs-autorefs (>=0.2.1)",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "C4", "ISC", "PT", "Q", "UP"] # Plan to add 'N' and 'ANN' later

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedVariable = "warning"
exclude = ["legacy"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that run the solver or cross module boundaries"
]
